--- a/home/index - 複製.html
+++ b/home/index - 複製.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="vendor/reset.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="multiple-scene ">
+<body class="single-scene ">
 
 <div id="pano"></div>
 
@@ -18,12 +18,7 @@
       <a href="javascript:void(0)" class="scene" data-id="0-home">
         <li class="text">home</li>
       </a>
-	  <a href="../personal" class="scene">
-        <li class="text">home</li>
-      </a>
-	  <a href="../super)" class="scene">
-        <li class="text">home</li>
-      </a>
+    
   </ul>
 </div>
 
