--- a/home/index.html
+++ b/home/index.html
@@ -19,10 +19,10 @@
         <li class="text">home</li>
       </a>
 	  <a href="../personal" class="scene">
-        <li class="text">home</li>
+        <li class="text">personal computer</li>
       </a>
 	  <a href="../super)" class="scene">
-        <li class="text">home</li>
+        <li class="text">super computer</li>
       </a>
   </ul>
 </div>
