--- a/super/index.html
+++ b/super/index.html
@@ -34,6 +34,9 @@
       <a href="javascript:void(0)" class="scene" data-id="4--">
         <li class="text">電腦博物館-超級電腦入口後</li>
       </a>
+	  <a href="../home" class="scene" data-id="4--">
+        <li class="text">home</li>
+      </a>
     
   </ul>
 </div>
