--- a/home/index.html
+++ b/home/index.html
@@ -21,7 +21,7 @@
 	  <a href="../personal" class="scene">
         <li class="text">personal computer</li>
       </a>
-	  <a href="../super)" class="scene">
+	  <a href="../super" class="scene">
         <li class="text">super computer</li>
       </a>
   </ul>
