--- a/personal/index.html
+++ b/personal/index.html
@@ -16,7 +16,7 @@
   <ul class="scenes">
     
       <a href="javascript:void(0)" class="scene" data-id="0-home">
-        <li class="text">home</li>
+        <li class="text">電腦博物館</li>
       </a>
     
       <a href="javascript:void(0)" class="scene" data-id="1--">
