--- a/super/index.html
+++ b/super/index.html
@@ -35,7 +35,7 @@
         <li class="text">電腦博物館-超級電腦入口後</li>
       </a>
 	  <a href="../home" class="scene" data-id="4--">
-        <li class="text">home</li>
+        <li class="text">回到首頁</li>
       </a>
     
   </ul>
