--- a/personal/index.html
+++ b/personal/index.html
@@ -39,7 +39,7 @@
         <li class="text">電腦博物館-個人電腦入口前</li>
       </a>
 	  <a href="../home" class="scene" data-id="5--">
-        <li class="text">home</li>
+        <li class="text">回到首頁</li>
       </a>
     
   </ul>
